--- a/style.css
+++ b/style.css
@@ -2,6 +2,18 @@ body {
     background-color: #eeff94;
 }
 
+#tab{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: auto;
+}
+
 .AccBtnStyle {
     background-color: rgb(25, 211, 23);
     /*color: #c7e3ba;*/
